--- a/news-template/main.css
+++ b/news-template/main.css
@@ -33,13 +33,13 @@ body{
   width: 100%;
 }
 .tit_nota1 .imgpost .newpost {
-  width: 22%;
-  height: 50%;
-  background: #0b109f;
-  position: absolute;
-  top: 60%;
-  left: 4%;
-  color: #fff;
+    width: 290px;
+    height: 50vh;
+    background: #0b109f;
+    position: absolute;
+    top: 68%;
+    left: 4%;
+    color: #fff;
 }
 .tit_nota1 .imgpost .newpost .bloque1 {
   margin: 70px 35px;
@@ -60,7 +60,7 @@ body{
 .tit_nota1 .imgpost .newpost .url {
   background: #5386d9;
   position: absolute;
-  left: -23%;
+  left: -20%;
   top: 67%;
   padding: 15px 60px;
   font-weight: bold;
