--- a/news-template/main.css
+++ b/news-template/main.css
@@ -1,5 +1,6 @@
 body{
 	background: #d8d8d8;
+  font-family: Arial, Helvetica, sans-serif;
 }
 .containerblanco{
 	width: 90%;
@@ -13,12 +14,13 @@ body{
   top: 12%;
   width: 10%;
 }
-.tit_nota1 .text1 {
-  text-transform: uppercase;
-  font-size: 5rem;
-  font-weight: bold;
-  padding: 7% 5% 0;
-  line-height: 0.5;
+.tit_nota1 .title_principal {
+    text-transform: uppercase;
+    font-size: 5rem;
+    font-weight: bold;
+    padding: 7% 5% 3%;
+    max-width: 68%;
+    line-height: 1;
 }
 .tit_nota1 .text2 {
   text-transform: uppercase;
@@ -34,7 +36,7 @@ body{
 }
 .tit_nota1 .imgpost .newpost {
     width: 290px;
-    height: 50vh;
+    height: 35vh;
     background: #0b109f;
     position: absolute;
     top: 68%;
@@ -78,4 +80,57 @@ body{
   color: black;
   font-size: 20px;
   line-height: 1.3;
+}
+.group {
+    padding: 10%;
+}
+.resumen_group{
+  color: black;
+  font-size: 18px;
+  line-height: 1.3;
+}
+.text_par {
+    object-position: top;
+    -webkit-mask-image: linear-gradient(to top,transparent 0,black 80%);
+}
+.btn-center{
+  text-align: center;
+}
+h2.title_principal {
+    margin-top: 0px;
+}
+.btn-nota {
+    background: #0b109f;
+    color: #fff;
+    text-decoration: none;
+    padding: 10px 25px;
+}
+.rows{
+  display: flex;
+	flex-direction: row;
+	flex-wrap: nowrap;
+	justify-content: center;
+	align-items: stretch;
+	align-content: stretch;
+}
+.w-50 {
+    flex: 50%;
+    margin: 5px;
+}
+.w-50 img{
+  width: 100%;
+}
+.images_s {
+    display: grid;
+    grid-template-columns: repeat(1,1fr);
+    row-gap: 12px;
+}
+.image_small {
+    max-height: 318px;
+    overflow: hidden;
+}
+.image_small img {
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
 }
