--- a/news-template/main.css
+++ b/news-template/main.css
@@ -134,3 +134,58 @@ h2.title_principal {
     width: 100%;
     height: 100%;
 }
+.w-60 {
+  margin: 5px;
+  flex: 60%;
+}
+.w-40 {
+  margin: 5px;
+  flex: 40%;
+}
+
+.rows .image_big {
+    width: 100%;
+}
+
+.bg-blue {
+    background: #0b109f;
+    color: #fff;
+    position: relative;
+}
+.pt-0{
+  padding-top: 0px;
+}
+.resumen_group_blue {
+    font-size: 1.5rem;
+    padding: 5px 30px;
+    position: relative;
+    overflow: hidden;
+}
+.resumen_group_blue:before {
+    content: "";
+    width: 100%;
+    height: 100%;
+    display: block;
+    background: linear-gradient(0deg, rgb(11 16 159) 0%, rgb(11 16 159) 10%, transparent 100%);
+    bottom: 0px;
+    position: absolute;
+    left: 0px;
+}
+.bg-text .btn-nota {
+    background: #fff;
+    color: #000;
+}
+.bg-text {
+    position: absolute;
+    height: 100%;
+    background: #0b109f;
+    top: -100px;
+}
+.bg-text .btn-center {
+    text-align: center;
+    z-index: 80;
+    height: 49px;
+    position: absolute;
+    width: 100%;
+    bottom: 0px;
+}
