--- a/news-template/main.css
+++ b/news-template/main.css
@@ -203,6 +203,14 @@ h2.title_principal {
 
 
 /*reponsive*/
+@media (min-width: 360px) and (max-width: 411px){
+	.tit_nota1 .imgpost .newpost{
+		height: 26vh;
+	}
+	.tit_nota1 .imgpost .newpost .url{
+		top: 52%;
+	}
+}
 
 @media (max-width: 600px){
   .tit_nota1 .title_principal{
