--- a/news-template/main.css
+++ b/news-template/main.css
@@ -1,11 +1,11 @@
-body{
-	background: #d8d8d8;
+body {
+  background: #d8d8d8;
   font-family: Arial, Helvetica, sans-serif;
 }
-.containerblanco{
-	width: 90%;
-    margin: 40px auto;
-    background: #fff;
+.containerblanco {
+  width: 90%;
+  margin: 40px auto;
+  background: #fff;
 }
 .tit_nota1 .logoecu {
   position: absolute;
@@ -15,12 +15,12 @@ body{
   width: 10%;
 }
 .tit_nota1 .title_principal {
-    text-transform: uppercase;
-    font-size: 5rem;
-    font-weight: bold;
-    padding: 7% 5% 3%;
-    max-width: 68%;
-    line-height: 1;
+  text-transform: uppercase;
+  font-size: 5rem;
+  font-weight: bold;
+  padding: 7% 5% 3%;
+  max-width: 68%;
+  line-height: 1;
 }
 .tit_nota1 .text2 {
   text-transform: uppercase;
@@ -35,13 +35,13 @@ body{
   width: 100%;
 }
 .tit_nota1 .imgpost .newpost {
-    width: 290px;
-    height: 40vh;
-    background: #0b109f;
-    position: absolute;
-    top: 68%;
-    left: 4%;
-    color: #fff;
+  width: 290px;
+  height: 40vh;
+  background: #0b109f;
+  position: absolute;
+  top: 68%;
+  left: 4%;
+  color: #fff;
 }
 .tit_nota1 .imgpost .newpost .bloque1 {
   margin: 70px 35px;
@@ -82,66 +82,66 @@ body{
   line-height: 1.3;
 }
 .group {
-    padding: 10%;
+  padding: 10%;
 }
-.resumen_group{
+.resumen_group {
   color: black;
   font-size: 18px;
   line-height: 1.3;
 }
 .text_par {
-    object-position: top;
-    -webkit-mask-image: linear-gradient(to top,transparent 0,black 80%);
+  object-position: top;
+  -webkit-mask-image: linear-gradient(to top, transparent 0, black 80%);
 }
-.btn-center{
+.btn-center {
   text-align: center;
 }
 h2.title_principal {
-    margin-top: 0px;
+  margin-top: 0px;
 }
 .btn-nota {
-    background: #0b109f;
-    color: #fff;
-    text-decoration: none;
-    padding: 10px 25px;
+  background: #0b109f;
+  color: #fff;
+  text-decoration: none;
+  padding: 10px 25px;
 }
-.rows{
+.rows {
   display: flex;
-	flex-direction: row;
-	flex-wrap: nowrap;
-	justify-content: center;
-	align-items: stretch;
-	align-content: stretch;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  justify-content: center;
+  align-items: stretch;
+  align-content: stretch;
 }
 
-.rows-2{
+.rows-2 {
   display: flex;
-	flex-direction: row;
-	flex-wrap: nowrap;
-	justify-content: center;
-	align-items: stretch;
-	align-content: stretch;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  justify-content: center;
+  align-items: stretch;
+  align-content: stretch;
 }
 .w-50 {
-    flex: 50%;
-    margin: 5px;
+  flex: 50%;
+  margin: 5px;
 }
-.w-50 img{
+.w-50 img {
   width: 100%;
 }
 .images_s {
-    display: grid;
-    grid-template-columns: repeat(1,1fr);
-    row-gap: 12px;
+  display: grid;
+  grid-template-columns: repeat(1, 1fr);
+  row-gap: 12px;
 }
 .image_small {
-    max-height: 318px;
-    overflow: hidden;
+  max-height: 318px;
+  overflow: hidden;
 }
 .image_small img {
-    object-fit: cover;
-    width: 100%;
-    height: 100%;
+  object-fit: cover;
+  width: 100%;
+  height: 100%;
 }
 .w-60 {
   margin: 5px;
@@ -153,76 +153,78 @@ h2.title_principal {
 }
 
 .rows .image_big {
-    width: 100%;
-    max-height: 648px;
+  width: 100%;
+  max-height: 648px;
 }
 
 .bg-blue {
-    background: #0b109f;
-    color: #fff;
-    position: relative;
+  background: #0b109f;
+  color: #fff;
+  position: relative;
 }
-.pt-0{
+.pt-0 {
   padding-top: 0px;
 }
 .resumen_group_blue {
-    font-size: 1.5rem;
-    padding: 5px 30px;
-    position: relative;
-    overflow: hidden;
+  font-size: 1.5rem;
+  padding: 5px 30px;
+  position: relative;
+  overflow: hidden;
 }
 .resumen_group_blue:before {
-    content: "";
-    width: 100%;
-    height: 100%;
-    display: block;
-    background: linear-gradient(0deg, rgb(11 16 159) 0%, rgb(11 16 159) 10%, transparent 100%);
-    bottom: 0px;
-    position: absolute;
-    left: 0px;
+  content: "";
+  width: 100%;
+  height: 100%;
+  display: block;
+  background: linear-gradient(
+    0deg,
+    rgb(11 16 159) 0%,
+    rgb(11 16 159) 10%,
+    transparent 100%
+  );
+  bottom: 0px;
+  position: absolute;
+  left: 0px;
 }
 .bg-text .btn-nota {
-    background: #fff;
-    color: #000;
+  background: #fff;
+  color: #000;
 }
 .bg-text {
-    position: absolute;
-    height: 100%;
-    background: #0b109f;
-    top: -100px;
+  position: absolute;
+  height: 100%;
+  background: #0b109f;
+  top: -100px;
 }
 .bg-text .btn-center {
-    text-align: center;
-    z-index: 80;
-    height: 49px;
-    position: absolute;
-    width: 100%;
-    bottom: 0px;
+  text-align: center;
+  z-index: 80;
+  height: 49px;
+  position: absolute;
+  width: 100%;
+  bottom: 0px;
 }
 
-
-
 /*reponsive*/
-@media (max-width: 600px){
-  .tit_nota1 .title_principal{
+@media (max-width: 600px) {
+  .tit_nota1 .title_principal {
     font-size: 1.5rem;
   }
-  .tit_nota1 .imgpost .newpost .bloque1{
+  .tit_nota1 .imgpost .newpost .bloque1 {
     margin: 45px 35px;
   }
-  .tit_nota1 .imgpost .newpost .bloque1 .textpost{
+  .tit_nota1 .imgpost .newpost .bloque1 .textpost {
     font-size: 40px;
-    
   }
-  .tit_nota1 .imgpost .newpost .bloque1 .textnew{
+  .tit_nota1 .imgpost .newpost .bloque1 .textnew {
     font-size: 25px;
   }
-  .tit_nota1 .imgpost .newpost{
+  .tit_nota1 .imgpost .newpost {
     width: 185px;
     height: 22vh;
     top: 44%;
   }
-  .tit_nota1 .imgpost .newpost .url{
+  .tit_nota1 .imgpost .newpost .url {
     font-size: 14px;
     left: -8%;
     top: 55%;
@@ -231,58 +233,62 @@ h2.title_principal {
 }
 
 
-
-@media (min-width: 360px) and (max-width: 411px){
-	.tit_nota1 .imgpost .newpost{
-		height: 26vh;
-	}
-	.tit_nota1 .imgpost .newpost .url{
-		top: 52%;
-	}
+@media (min-width: 360px) and (max-width: 411px) {
+  .tit_nota1 .imgpost .newpost {
+    height: 26vh;
+  }
+  .tit_nota1 .imgpost .newpost .url {
+    top: 52%;
+  }
 }
-@media (max-width: 768px){
-  .tit_nota1 .titulon1{
+
+@media (min-width: 393px) and (max-width: 393px) {
+  .tit_nota1 .imgpost .newpost {
+    height: 22vh;
+  }
+}
+@media (max-width: 768px) {
+  .tit_nota1 .titulon1 {
     font-size: 1.6rem;
   }
-  .rows .image_big{
+  .rows .image_big {
     object-fit: cover;
     height: 100%;
   }
-  .bg-text{
+  .bg-text {
     position: relative;
   }
-  .group.pt-0 .rows.first{
+  .group.pt-0 .rows.first {
     display: block;
-  } 
-  .resumen_group_blue{
+  }
+  .resumen_group_blue {
     font-size: 1.2rem;
     padding: 15px 30px;
     height: 360px;
   }
-  .bg-text .btn-center{
+  .bg-text .btn-center {
     bottom: auto;
   }
-  .resumen_group.second{
+  .resumen_group.second {
     display: none;
   }
-  
 }
 
 /*reponsive*/
 
-@media (min-width: 1366px) and (max-width: 1366px){
-	.tit_nota1 .imgpost .newpost{
-		height: 50vh;
-	}
-	.tit_nota1 .imgpost .newpost .url{
-		top: 57%;
-	}
+@media (min-width: 1366px) and (max-width: 1366px) {
+  .tit_nota1 .imgpost .newpost {
+    height: 50vh;
+  }
+  .tit_nota1 .imgpost .newpost .url {
+    top: 57%;
+  }
 }
-@media (min-width: 1440px) and (max-width: 1440px){
-		.tit_nota1 .imgpost .newpost{
-		height: 35vh;
-	}
-	.tit_nota1 .imgpost .newpost .url{
-		top: 60%;
-	}
+@media (min-width: 1440px) and (max-width: 1440px) {
+  .tit_nota1 .imgpost .newpost {
+    height: 35vh;
+  }
+  .tit_nota1 .imgpost .newpost .url {
+    top: 60%;
+  }
 }
