--- a/news-template/main.css
+++ b/news-template/main.css
@@ -155,6 +155,8 @@ h2.title_principal {
 .rows .image_big {
   width: 100%;
   max-height: 648px;
+  height: 100%;
+    object-fit: cover;
 }
 
 .bg-blue {
@@ -271,10 +273,7 @@ h2.title_principal {
   .tit_nota1 .titulon1 {
     font-size: 1.6rem;
   }
-  .rows .image_big {
-    object-fit: cover;
-    height: 100%;
-  }
+ 
   .bg-text {
     position: relative;
   }
@@ -296,9 +295,35 @@ h2.title_principal {
 
 /*reponsive*/
 
+@media (min-width: 1024px) and (max-width: 1024px) {
+  .tit_nota1 .imgpost .newpost{
+    height: 20vh;
+    top: 63%;
+  }
+  .tit_nota1 .title_principal{
+    font-size: 4rem;
+  }
+ 
+  .group.pt-0 .rows.first {
+    display: block;
+  }
+  .resumen_group_blue {
+    font-size: 1.2rem;
+    padding: 15px 30px;
+    height: 181px;
+  }
+  .bg-text {
+    position: relative;
+  }
+  .bg-text .btn-center{
+    bottom: -73px;
+  }
+}
+
+
 @media (min-width: 1366px) and (max-width: 1366px) {
   .tit_nota1 .imgpost .newpost {
-    height: 50vh;
+    height: 43vh;
   }
   .tit_nota1 .imgpost .newpost .url {
     top: 57%;
