--- a/gaby-animacion/main.css
+++ b/gaby-animacion/main.css
@@ -6,6 +6,12 @@
   padding-top: 1.875rem;
 }
 
+.cv-b_b,
+.cv-b_a,
+.cv-b_x {
+  transition: all 0.25s;
+}
+
 .a .a_c > h1 {
   font-family: "Marcin Ant B Cn";
   font-style: normal;
@@ -331,55 +337,55 @@
   }
 }
 
-
-
 /* cabecera */
-.z-he .csw { /* seccion y alertas */
+.z-he .csw {
+  /* seccion y alertas */
   display: none;
 }
 
 @media (min-width: 768px) {
-  
   .z-he .x-ph {
     min-height: 53px;
   }
-  
+
   .z-he .x.x-nf {
     padding-top: 0;
     padding-bottom: 0;
   }
-  
+
   .z-he .x-nf .x_w {
     padding-top: 10px;
     padding-bottom: 10px;
   }
-  
-  .z-he .x-nf .x_e { /* edicion */
+
+  .z-he .x-nf .x_e {
+    /* edicion */
     display: none;
   }
-  
-  .z-he .x-nf .x_bh { /* boton hamburguesa */
+
+  .z-he .x-nf .x_bh {
+    /* boton hamburguesa */
     margin-top: 0;
   }
-  
-  .z-he .x-nf .ep_l { /* contenedor logo EP */
+
+  .z-he .x-nf .ep_l {
+    /* contenedor logo EP */
     grid-column: 4/6;
     margin-top: 0;
   }
-  
-  .z-he .x-nf .ep_l .ep_e { /* logo EP */
+
+  .z-he .x-nf .ep_l .ep_e {
+    /* logo EP */
     background-size: auto 28px;
     background-position: center 2px;
   }
-  
 }
 
-@media (min-width: 1001px){
-  
-  .z-he .x-nf .ep_l { /* contenedor logo EP */
+@media (min-width: 1001px) {
+  .z-he .x-nf .ep_l {
+    /* contenedor logo EP */
     grid-column: 5/9;
   }
-  
 }
 
 /* apertura */
@@ -388,7 +394,8 @@
 #elpais_gpt-NSTD1,
 #elpais_gpt-SKY1,
 #elpais_gpt-SKY2,
-#fusion-app .ad-giga-1 { /* siempre quitamos publidad de los skys y cabecera porque choca con las aperturas */
+#fusion-app .ad-giga-1 {
+  /* siempre quitamos publidad de los skys y cabecera porque choca con las aperturas */
   display: none !important;
 }
 
